--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 pring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url =jdbc:postgresql://localhost:5432/SmartFridgeDB
